[package]
name = "keyboard-converter"
version = "0.1.0"
edition = "2021"

[profile.release]
# lto = true
# opt-level = 's'

[lib]
crate-type = ["cdylib"]

[dependencies]
strum = "0.24"
strum_macros = "0.24"
num_enum = "0.5"

wasm-bindgen = "0.2"
js-sys = "0.3.57"


[dependencies.web-sys]
version = "0.3.57"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'CssStyleDeclaration',
    'KeyEvent',
    'console',
]
